# 80m-agent-desktop-v3

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  README.md  README.zh-CN.md  dev-app-update.yml  electron-builder.yml  eslint.config.mjs  package-lock.json  package.json  vite.tauri.config.ts
.github/workflows/: release.yml
docs/: HERMES_V12_DESKTOP_PLAN.md  TAURI_MIGRATION.md
scripts/: hermes-smoke.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/main/: config.ts  cronjobs.ts  default-models.ts  hermes.ts  index.ts  installer.ts  memory.ts  models.ts  playwright.ts  profiles.ts  session-cache.ts  sessions.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  constants.ts  main.tsx  tauriBridge.ts
src/renderer/src/assets/: main.css
src/renderer/src/components/: AgentMarkdown.tsx  Animated80MLogo.tsx  BackgroundLayers.tsx  FilmGrainCanvas.tsx  ParticleFieldCanvas.tsx  ThemeProvider.tsx
src/renderer/src/components/80m/: AgentPreviewPanel.tsx  AgentTab.tsx  AppNotifications.tsx  AppTitleBar.tsx  AtmMascot.tsx  ChatArea.tsx  CommandPalette.tsx  InputBar.tsx  Layout80m.tsx  Messages.tsx  ProjectsSidebar.tsx  SelectionToolbar.tsx  Settings.tsx  Sidebar.tsx  WaveformIndicator.tsx  index.ts
src/renderer/src/hooks/: useAudio.ts
src/renderer/src/screens/Chat/: Chat.tsx
src/shared/i18n/: index.test.ts
src/shared/i18n/locales/en/: common.ts  (+6 more)
tests/: constants.test.ts  installer-utils.test.ts  preload-api-surface.test.ts  sse-parser.test.ts
(+16 files in other folders)
