[package]
name = "eighty-m-agent-desktop"
version = "0.8.0"
description = "80m Agent Desktop Tauri shell"
authors = ["80M"]
edition = "2021"

[lib]
name = "eighty_m_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
reqwest = { version = "0.12", features = ["json"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
url = "2"
